<resources>
    <string name="app_name">MQTT Push Client</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_about">About</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_reload">Reload</string>
    <string name="menu_noactions">No actions defined</string>
    <string name="menu_theme">Theme</string>
    <string name="menu_theme_light">Light</string>
    <string name="menu_theme_dark">Dark</string>
    <string name="menu_theme_battery_saver">System Default</string>
    <string name="menu_theme_system_default">System Default</string>
    <string name="info_no_topics">Add at least one topic to receive notifications. Navigate into the server account edit mode and tap on MQTT TOPICS.</string>
    <string name="action_add_account">Add</string>
    <string name="action_edit_account">Edit</string>
    <string name="action_remove_account">Remove</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_back">Back</string>
    <string name="action_topics">Topics</string>
    <string name="action_save_account">Save</string>
    <string name="action_save">Save</string>
    <string name="action_clear">Clear</string>
    <string name="action_delete_topics">Delete</string>
    <string name="action_delete_msgs">Delete</string>
    <string name="action_filter_msgs">Filter Topics</string>
    <string name="action_actions">MQTT Actions</string>
    <string name="action_add">Add</string>
    <string name="action_update">Update</string>
    <string name="action_edit_topic">Edit</string>
    <string name="action_edit_dashboard_item">Edit</string>
    <string name="action_update_topic">Update</string>
    <string name="action_mqtt_topics">MQTT Topics</string>
    <string name="action_mqtt_actions">MQTT Actions</string>
    <string name="menu_manage_images">Manage Images</string>
    <string name="dlg_remove_account_title">Remove Account</string>
    <string name="dlg_remove_account_msg">Confirm removal of currently selected account.</string>
    <string name="dlg_delete_topic_title">Delete Topic</string>
    <string name="dlg_delete_topic_msg">Unsubscribe from selected topic.</string>
    <string name="dlg_delete_topic_msg_pl">Unsubscribe from selected topics.</string>
    <string name="dlg_add_topic_title">Add Topic</string>
    <string name="dlg_update_topic_title">Update Topic</string>
    <string name="dlg_edit_topic_label">Subscribe to topic:</string>
    <string name="dlg_edit_topic_label2">Topic:</string>
    <string name="dlg_add_topic_notif">Notifications:</string>
    <string name="dlg_filter_label">Filter Script:</string>
    <string name="dlg_filter_button_add">Add</string>
    <string name="dlg_filter_button_edit">Edit</string>
    <string name="dlg_filter_button_edit_modified">Edit (modified)</string>
    <string name="dlg_actions_title_add">Add MQTT Action</string>
    <string name="dlg_actions_title_update">Update MQTT Action</string>
    <string name="dlg_actions_name_label">Name:</string>
    <string name="dlg_actions_topic_label">Topic:</string>
    <string name="dlg_actions_content_label">Content:</string>
    <string name="dlg_actions_retain_label">Retain</string>
    <string name="dlg_delete_actions_title">Delete Action</string>
    <string name="dlg_delete_actions_msg">Delete selected action.</string>
    <string name="dlg_delete_actions_msg_pl">Delete selected actions.</string>
    <string name="dlg_ntype_dis">Disabled</string>
    <string name="dlg_ntype_low">None</string>
    <string name="dlg_ntype_medium">Notify</string>
    <string name="dlg_ntype_high">Notify + Sound</string>
    <string name="warning_no_notification_perm">You haven\'t allowed notifications</string>
    <string name="error_loading_accounts">Error: Loading accounts failed.</string>
    <string name="error_saving_accounts">Error: Saving account list failed.</string>
    <string name="notification_deleted">Pending Messages Deleted</string>
    <string name="notification_show_messages">Too many messages stored on the FCM server or have expired (after 4 weeks)</string>
    <string name="messages_filter_label">Topic:</string>
    <string name="action_cmd_exe">Executed %s</string>
    <string name="notificaion_alarm">ALARM!</string>
    <string name="notificaion_channel_alarm">Alarm messages</string>
    <string name="notificaion_channel_reg">Regular messages</string>
    <string name="title_add_account">Add Server</string>
    <string name="title_edit_account">Edit Server</string>
    <string name="title_messages">Messages</string>
    <string name="title_topics">Topics</string>
    <string name="title_actions">MQTT Actions</string>
    <string name="title_about">About</string>
    <string name="title_help">Help</string>
    <string name="about_version" formatted="false">"Version: %s (%d)"</string>
    <string name="label_push_notification_server">Push Notification Server</string>
    <string name="label_host">Host:</string>
    <string name="label_mqtt_server">MQTT Server</string>
    <string name="label_port">Port:</string>
    <string name="label_ssl">SSL</string>
    <string name="label_user">User:</string>
    <string name="label_pwd">Pwd:</string>
    <string name="explanation_get_notified">Get notified about subscribed topics listed below</string>
    <string name="label_topics">Topics:</string>
    <string name="error_empty_field">Field must not be empty.</string>
    <string name="error_data_unmodified">Data was not modified.</string>
    <string name="error_js_unmodified">JavaScript was not modified.</string>
    <string name="info_data_saved">Data has been saved</string>
    <string name="dlg_back_without_save_title">Go back without saving?</string>
    <string name="dlg_back_without_save_msg">Data has been modified.</string>
    <string name="warning_back_pressed">Press Back again to close this app</string>
    <string name="op_in_progress">Please wait until current action has been finished.</string>
    <string name="select_single_topic">Only one topic may be selected for editing</string>
    <string name="errormsg_unexpected_error">An unexprected error has occurred.</string>
    <string name="errormsg_general_error">An error has occurred.</string>
    <string name="title_privacy">Privacy Policy</string>
    <string name="privacy_summary">
MQTT Push Client stores MQTT logon credentials and settings locally and on the specified remote server
to communicate with the MQTT broker and to receive push notifications
(via Google\'s Firebase Cloud Messaging)
    </string>
    <string name="privacy_link_text">Click here for complete privacy statements</string>
    <string name="home_url_label">www.radioshuttle.de</string>
    <string name="help_url_help_label">Online Help</string>
    <string name="errormsg_connection_failed">Connection failed</string>
    <string name="errormsg_connection_failed_SSL">Connection failed (SSL error)</string>
    <string name="errormsg_certificate_error">Invalid certificate.</string>
    <string name="errormsg_socket_timeout">Connection failed: Timeout</string>
    <string name="errormsg_econnrefused">Connection refused: The attempt to connect was ignored</string>
    <string name="errormsg_enetunreach">Connection failed: No network</string>
    <string name="errormsg_firebase_init_failed">Initializing cloud messaging API failed.</string>
    <string name="errormsg_io_error">Failed I/O operation</string>
    <string name="errormsg_timeout">Timeout</string>
    <string name="errormsg_not_authorized">Bad user name or password or not authorized</string>
    <string name="errormsg_not_permitted">License error: this account is not activated/permitted by %s. Contact sales.</string>
    <string name="errormsg_invalid_url">Invalid MQTT server URL."</string>
    <string name="errormsg_unexpected_server_error">An unexpected error on the push server has occurred.</string>
    <string name="errormsg_op_canceled">Request canceled.</string>
    <string name="errormsg_fcm_id">Messaging token not received yet. Click Refresh to retry.</string>
    <string name="errormsg_incompatible_protocol" formatted="false">"Incompatible protocol version. Client: %d.%d, Server: %d.%d"</string>
    <string name="errormsg_unknown_host">IP address of push server could not be determined.</string>
    <string name="errormsg_invalid_request">Error: Invalid request arguments.</string>
    <string name="errormsg_mqtt_prefix">MQTT error:</string>
    <string name="status_ok">Server online</string>
    <string name="dlg_del_messages_title">Delete Messages</string>
    <string name="dlg_item_delete_all">All</string>
    <string name="dlg_item_delete_older_one_day">Older than one day</string>
    <string name="resotre_action">Restore messages</string>
    <string name="dlg_certerr_title">Security Warning</string>
    <string name="dlg_certerr_intro">"Push Server %s uses an invalid certificate:"</string>
    <string name="dlg_certerr_selfsigned">The certificate is not trusted because it is self-signed.</string>
    <string name="dlg_certerr_invhost">The certificate is not valid for this push server.</string>
    <string name="dlg_certerr_expired">The certificate has expired or is not valid yet.</string>
    <string name="dlg_certerr_unknown_issuer">The issuer certificate is unknown.</string>
    <string name="dlg_certerr_other">"Other:"</string>
    <string name="action_deny">Deny</string>
    <string name="action_add_ex">Add Exception</string>
    <string name="errormsg_insecure">Connection aborted: Push server uses cleartext traffic</string>
    <string name="dlg_insecure_txt">"Push Server %s uses cleartext traffic."</string>
    <string name="action_allow">Allow</string>
    <string name="title_add_javascript">Add JavaScript</string>
    <string name="title_edit_javascript">Edit JavaScript</string>
    <string name="dlg_filter_header">Filter the content of all messages with the topic</string>
    <string name="dlg_back_without_save_js_msg">JavaScript code has been modified.</string>
    <string name="dlg_confirm_clear_title">Clear JavaScript content?</string>
    <string name="dlg_testdata_title">Test Data</string>
    <string name="dlg_testdata_import_button">Import last received message</string>
    <string name="dlg_testdata_err_not_found">No messages found for this topic</string>
    <string name="javascript_result">JavaScript result:</string>
    <string name="javascript_err">JavaScript error:</string>
    <string name="javascript_err_timeout">Timeout</string>
    <string name="filterscript_err">Filter script error:</string>
    <string name="filterscript_err_timeout">Timeout</string>
    <string name="action_run">Run</string>
    <string name="action_set">Set</string>
    <string name="action_test">Test Data</string>
    <string name="test_data_label">Test Data (msg.text):</string>
    <string name="test_data_label_outputscript">Test Data (input):</string>
    <string name="menu_topcifilter_example_title">Insert Example</string>
    <string name="menu_topicfilter_json_title">JSON</string>
    <string name="menu_topicfilter_split_title">Split</string>
    <string name="menu_topicfilter_regexp_title">Regular Expression</string>
    <string name="menu_topicfilter_binary_title">Binary</string>
    <string name="menu_topicfilter_hexdump_title">Hex Dump</string>
    <string name="title_chooser">Select an Image</string>
    <string name="title_manage_images">Manage Images</string>
    <string name="tab_title_internal">Internal</string>
    <string name="tab_title_user">User</string>
    <string name="action_dashboard">Dashboard</string>
    <string name="action_list">List View</string>
    <string name="action_zoom">Zoom</string>
    <string name="dash_label_name">Name:</string>
    <string name="dash_label_bcolor">Color:</string>
    <string name="dash_label_group">Group:</string>
    <string name="dash_label_position">Pos:</string>
    <string name="dash_label_color">Color:</string>
</resources>