<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_add"
        android:orderInCategory="80"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/action_add_account"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="100"
        android:title="@string/menu_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_theme"
        android:orderInCategory="103"
        android:title="@string/menu_theme"
        app:showAsAction="never">
        <menu>
            <group android:id="@+id/groupTheme" android:checkableBehavior="single">
                <item android:id="@+id/menu_theme_light" android:title="@string/menu_theme_light" />
                <item android:id="@+id/menu_theme_dark" android:title="@string/menu_theme_dark" />
                <item android:id="@+id/menu_theme_system" android:title="@string/menu_theme_system_default" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_privacy"
        android:orderInCategory="105"
        android:title="@string/menu_privacy"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:orderInCategory="110"
        android:title="@string/menu_about"
        app:showAsAction="never" />

</menu>