<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:orderInCategory="80"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/action_add_account"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_zoom"
        android:orderInCategory="90"
        android:icon="@drawable/ic_menu_zoom"
        android:title="@string/action_zoom"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_change_view"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_list"
        android:title="@string/action_list"
        app:showAsAction="always" />

</menu>