<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_change_view"
        android:orderInCategory="90"
        android:icon="@drawable/ic_menu_widgets"
        android:title="@string/action_dashboard"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_delete"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_delete"
        android:title="@string/action_delete_msgs"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_noactions"
        android:enabled="false"
        android:visible="false"
        android:orderInCategory="101"
        android:title="@string/menu_noactions"
        app:showAsAction="never" />


</menu>