<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/topicLabel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dlg_edit_topic_label"
        android:labelFor="@+id/topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        app:layout_constraintLeft_toLeftOf="@id/topicLabel"
        app:layout_constraintTop_toBottomOf="@id/topicLabel"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/topic"
        android:inputType="text"
        android:minHeight="48dp"
        android:ems="15"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <TextView
        android:id="@+id/topic2"
        app:layout_constraintTop_toBottomOf="@id/topic"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="8dp"
        android:paddingLeft="8dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/notificationsLabel"
        app:layout_constraintTop_toBottomOf="@id/topic2"
        android:layout_marginTop="8dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dlg_add_topic_notif"
        android:labelFor="@+id/notificationtype_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/notificationtype_spinner"
        app:layout_constraintTop_toBottomOf="@id/notificationsLabel"
        android:spinnerMode="dropdown"
        android:minHeight="48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:visibility="gone"
        android:id="@+id/filterLabel"
        app:layout_constraintTop_toBottomOf="@id/notificationtype_spinner"
        android:layout_marginTop="8dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dlg_filter_label"
        android:labelFor="@+id/filterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:visibility="gone"
        android:id="@+id/filterButton"
        android:layout_marginTop="4dp"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/filterLabel"
        android:text="@string/dlg_filter_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>