<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/actionNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dlg_actions_name_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/actionNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintLeft_toLeftOf="@id/actionNameLabel"
            app:layout_constraintTop_toBottomOf="@id/actionNameLabel" />

        <TextView
            android:id="@+id/actionTopicLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dlg_actions_topic_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintLeft_toLeftOf="@id/actionNameEditText"
            app:layout_constraintTop_toBottomOf="@id/actionNameEditText" />

        <EditText
            android:id="@+id/actionTopicText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintLeft_toLeftOf="@id/actionTopicLabel"
            app:layout_constraintTop_toBottomOf="@id/actionTopicLabel" />

        <TextView
            android:id="@+id/actionContentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dlg_actions_content_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintLeft_toLeftOf="@id/actionTopicText"
            app:layout_constraintTop_toBottomOf="@id/actionTopicText" />

        <EditText
            android:id="@+id/actionContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintLeft_toLeftOf="@id/actionContentLabel"
            app:layout_constraintTop_toBottomOf="@id/actionContentLabel" />

        <CheckBox
            android:id="@+id/retain"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dlg_actions_retain_label"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:checked="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintLeft_toLeftOf="@id/actionContentText"
            app:layout_constraintTop_toBottomOf="@id/actionContentText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
